// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButtonGroup matches snapshot with selectionMode #selectionMode 1`] = `
<div
  aria-orientation="horizontal"
  className="sc-gsnTZi hmfeGJ"
  data-orientation="horizontal"
  data-rac=""
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  role="toolbar"
>
  <button
    aria-pressed={true}
    className="sc-dkzDqf gfcEfH"
    data-key="red"
    data-rac=""
    data-selected={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    Red
  </button>
  <button
    aria-pressed={false}
    className="sc-dkzDqf gfcEfH"
    data-key="green"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    Green
  </button>
  <button
    aria-pressed={false}
    className="sc-dkzDqf gfcEfH"
    data-key="blue"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    Blue
  </button>
  <button
    aria-pressed={false}
    className="sc-dkzDqf gfcEfH"
    data-key="yellow"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    Yellow
  </button>
  <button
    aria-pressed={false}
    className="sc-dkzDqf gfcEfH"
    data-key="orange"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    Orange
  </button>
</div>
`;

exports[`ToggleButtonGroup matches snapshot with selectionMode #selectionMode 2`] = `
<div
  aria-orientation="horizontal"
  className="sc-gsnTZi hmfeGJ"
  data-orientation="horizontal"
  data-rac=""
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  role="radiogroup"
>
  <button
    aria-checked={true}
    className="sc-dkzDqf gfcEfH"
    data-key="red"
    data-rac=""
    data-selected={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Red
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf gfcEfH"
    data-key="green"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Green
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf gfcEfH"
    data-key="blue"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Blue
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf gfcEfH"
    data-key="yellow"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Yellow
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf gfcEfH"
    data-key="orange"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Orange
  </button>
</div>
`;

exports[`ToggleButtonGroup matches snapshot with selectionMode #selectionMode 3`] = `
<div
  aria-orientation="horizontal"
  className="sc-gsnTZi hmfeGJ"
  data-orientation="horizontal"
  data-rac=""
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  role="radiogroup"
>
  <button
    aria-checked={true}
    className="sc-dkzDqf gfcEfH"
    data-key="red"
    data-rac=""
    data-selected={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Red
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf gfcEfH"
    data-key="green"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Green
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf gfcEfH"
    data-key="blue"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Blue
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf gfcEfH"
    data-key="yellow"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Yellow
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf gfcEfH"
    data-key="orange"
    data-rac=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    type="button"
  >
    Orange
  </button>
</div>
`;
